--- a/WebContent/css/competition-add.css
+++ b/WebContent/css/competition-add.css
@@ -7,11 +7,10 @@ body {
   	}
   	
   	.content {
-  	  background: white;
+  		background: white;
   	  padding: 30px 40px;
   	  border-radius: 5px;
   	  margin-bottom: 20px;
-  	  min-height: 500px;
   	}
   	    	
   	.content table {
@@ -28,3 +27,14 @@ body {
   		text-align: center;
   		vertical-align: middle!important;
   	}
+  	
+  	#competition_date_div div{
+  		width:10%;
+  		display: inline;
+  		text-align: center;
+  	}
+  	
+  	#competition_date_div input{
+  		width:45%;
+  	}
+  	
