--- a/WebContent/css/table.css
+++ b/WebContent/css/table.css
@@ -13,6 +13,10 @@ body {
   	  margin-bottom: 20px;
   	  min-height: 500px;
   	}
+  	
+  	.content select{
+  		min-width:200px;
+  	}
   	    	
   	.content table {
   		background: white;
